Anreicherung der Daten

--- a/input_history.ipynb
+++ b/input_history.ipynb
@@ -136,6 +136,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Anreicherung der Daten:\n",
+    "\n",
+    "# Simple-Moving-Average (7, 14, 30 Tage Temperatur)\n",
+    "window_sizes_temp = [7, 14, 30]\n",
+    "\n",
+    "for window_size_temp in window_sizes_temp:\n",
+    "    column_name = f\"SMA_temp{window_size_temp}\"\n",
+    "    weather_history_ZH[column_name] = weather_history_ZH['temp'].rolling(window=window_size_temp).mean()\n",
+    "\n",
+    "# Simple-Moving-Average (7, 14, 30 Tage Luftfeuchtigkeit)\n",
+    "window_sizes_hum = [7, 14, 30]\n",
+    "\n",
+    "for window_size_hum in window_sizes_hum:\n",
+    "    column_name = f\"SMA_humidity{window_size_hum}\"\n",
+    "    weather_history_ZH[column_name] = weather_history_ZH['humidity'].rolling(window=window_size_hum).mean()\n",
+    "\n",
+    "# Temperatur Range\n",
+    "weather_history_ZH['Temp_Range'] = weather_history_ZH['tempmax'] - weather_history_ZH['tempmin']\n",
+    "\n",
+    "# Jahreszeit \n",
+    "weather_history_ZH['Season'] = (weather_history_ZH['datetime'].apply(lambda x: int(x.split('.')[1]))%12 + 3)//3\n",
+    "seasons = {1: 'Winter', 2: 'Frühling', 3: 'Sommer', 4: 'Herbst'}\n",
+    "weather_history_ZH['Season'] = weather_history_ZH['Season'].map(seasons)\n",
+    "\n",
+    "# Wetterkonditionen\n",
+    "def weather_type(condition):\n",
+    "    if 'cloudy' in condition.lower():\n",
+    "        return 'Cloudy'\n",
+    "    elif 'rain' in condition.lower():\n",
+    "        return 'Rainy'\n",
+    "    elif 'snow' in condition.lower():\n",
+    "        return 'Snowy'\n",
+    "    else:\n",
+    "        return 'Clear'\n",
+    "\n",
+    "weather_history_ZH['Weather_Type'] = weather_history_ZH['conditions'].apply(weather_type)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
