--- a/model.ipynb
+++ b/model.ipynb
@@ -10,15 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.impute import SimpleImputer"
+    "import tensorflow as tf\n",
+    "from tensorflow import keras\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score, explained_variance_score"
    ]
   },
   {
@@ -31,29 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Anzahl gelöschter Datensätze: 12684\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = pd.read_csv('merged_tables.csv')\n",
-    "# Liste der Spalten, die geprüft werden sollen\n",
-    "columns_to_check = ['Wert', 'precipprob', 'windgust', 'visibility']\n",
-    "\n",
-    "# Datensätze löschen, die leere Werte in mindestens einer der angegebenen Spalten enthalten\n",
-    "df_cleaned = df.dropna(subset=columns_to_check)\n",
-    "\n",
-    "# Anzahl der gelöschten Datensätze ermitteln\n",
-    "num_deleted_rows = len(df) - len(df_cleaned)\n",
-    "\n",
-    "print(f\"Anzahl gelöschter Datensätze: {num_deleted_rows}\")"
+    "# Lade den Datensatz aus 'merged_tables.csv'\n",
+    "data = pd.read_csv('merged_tables.csv')\n",
+    "# Entferne Datensätze mit leeren Werten in den angegebenen Spalten\n",
+    "data.dropna(subset=['Wert', 'precipprob', 'windgust', 'visibility'], inplace=True)"
    ]
   },
   {
@@ -66,15 +55,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Selection of columns/features for prediction\n",
-    "X = df_cleaned[['precipprob', 'windgust', 'visibility']]  \n",
-    "# Define Target variable\n",
-    "y = df_cleaned['Wert']  \n",
+    "# Aufteilung der Daten in Features (X) und Luftqualität (y)\n",
+    "X = data[['precipprob', 'windgust', 'visibility']]\n",
+    "y = data['Wert']\n",
     "\n",
+    "# Aufteilung der Daten in Trainings- und Testsets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
    ]
   },
@@ -83,31 +72,116 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create and train the linear regression model"
+    "## Model Creation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LinearRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LinearRegression</label><div class=\"sk-toggleable__content\"><pre>LinearRegression()</pre></div></div></div></div></div>"
-      ],
-      "text/plain": [
-       "LinearRegression()"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lineare Regression RMSE: 10.517236753153938\n"
+     ]
     }
    ],
    "source": [
-    "model = LinearRegression()\n",
-    "model.fit(X_train, y_train)"
+    "# Lineare Regression\n",
+    "linear_model = LinearRegression()\n",
+    "linear_model.fit(X_train, y_train)\n",
+    "linear_predictions = linear_model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entscheidungsbaum RMSE: 1.8641014721382632\n",
+      "Mean Absolute Error (MAE): 0.472338860051359\n",
+      "Mean Squared Error (MSE): 3.47487429842804\n",
+      "R^2 Score: 0.9769467319421307\n",
+      "Explained Variance Score: 0.9769474453264686\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Entscheidungsbaum\n",
+    "tree_model = DecisionTreeRegressor()\n",
+    "tree_model.fit(X_train, y_train)\n",
+    "tree_predictions = tree_model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest RMSE: 1.9226926684854884\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Random Forest\n",
+    "forest_model = RandomForestRegressor()\n",
+    "forest_model.fit(X_train, y_train)\n",
+    "forest_predictions = forest_model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "906/906 [==============================] - 7s 5ms/step - loss: 185.6165\n",
+      "Epoch 2/10\n",
+      "906/906 [==============================] - 3s 3ms/step - loss: 116.5620\n",
+      "Epoch 3/10\n",
+      "906/906 [==============================] - 3s 3ms/step - loss: 95.8578\n",
+      "Epoch 4/10\n",
+      "906/906 [==============================] - 2s 2ms/step - loss: 94.1520\n",
+      "Epoch 5/10\n",
+      "906/906 [==============================] - 2s 2ms/step - loss: 93.1985\n",
+      "Epoch 6/10\n",
+      "906/906 [==============================] - 2s 2ms/step - loss: 92.3493\n",
+      "Epoch 7/10\n",
+      "906/906 [==============================] - 2s 2ms/step - loss: 92.1556\n",
+      "Epoch 8/10\n",
+      "906/906 [==============================] - 2s 2ms/step - loss: 91.8781\n",
+      "Epoch 9/10\n",
+      "906/906 [==============================] - 2s 2ms/step - loss: 91.7418\n",
+      "Epoch 10/10\n",
+      "906/906 [==============================] - 2s 2ms/step - loss: 91.0009\n",
+      "227/227 [==============================] - 0s 2ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Neuronales Netzwerk\n",
+    "model = keras.Sequential([\n",
+    "    keras.layers.Dense(64, activation='relu', input_shape=(X_train.shape[1],)),\n",
+    "    keras.layers.Dense(64, activation='relu'),\n",
+    "    keras.layers.Dense(1)\n",
+    "])\n",
+    "model.compile(optimizer='adam', loss='mean_squared_error')\n",
+    "model.fit(X_train, y_train, epochs=10, batch_size=32)\n",
+    "nn_predictions = model.predict(X_test)"
    ]
   },
   {
@@ -115,26 +189,130 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Make predictions and evaluate the model"
+    "## Model Evaluation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 110.61226892189198\n"
+      "Lineare Regression RMSE: 10.517236753153938\n",
+      "Linear Regression Mean Absolute Error (MAE): 7.491540286867864\n",
+      "Linear Regression Mean Squared Error (MSE): 110.61226892189198\n",
+      "Linear Regression R^2 Score: 0.26616790509542887\n",
+      "Linear Regression Explained Variance Score: 0.266531266231666\n",
+      "-------\n",
+      "Decision Tree RMSE: 1.8641014721382632\n",
+      "Decision Tree Mean Absolute Error (MAE): 0.472338860051359\n",
+      "Decision Tree Mean Squared Error (MSE): 3.47487429842804\n",
+      "Decision Tree R^2 Score: 0.9769467319421307\n",
+      "Decision Tree Explained Variance Score: 0.9769474453264686\n",
+      "-------\n",
+      "Random Forest RMSE: 1.9226926684854884\n",
+      "Random Forest Mean Absolute Error (MAE): 0.6738695046210812\n",
+      "Random Forest Mean Squared Error (MSE): 3.6967470974478482\n",
+      "Random Forest R^2 Score: 0.9754747670100848\n",
+      "Random Forest Explained Variance Score: 0.9754759031682241\n",
+      "-------\n",
+      "Neuronal Network RMSE: 9.44706274252924\n",
+      "Neuronal Network Mean Absolute Error (MAE): 6.836361900184248\n",
+      "Neuronal Network Mean Squared Error (MSE): 89.24699446128409\n",
+      "Neuronal Network R^2 Score: 0.407910989008754\n",
+      "Neuronal Network Explained Variance Score: 0.41082459776963887\n"
      ]
     }
    ],
    "source": [
-    "y_pred = model.predict(X_test)\n",
-    "mse = mean_squared_error(y_test, y_pred)\n",
-    "print(f'Mean Squared Error: {mse}')"
+    "# Linear Regression \n",
+    "linear_rmse = mean_squared_error(y_test, linear_predictions, squared=False)\n",
+    "print(\"Lineare Regression RMSE:\", linear_rmse)\n",
+    "\n",
+    "# Mean Absolute Error (MAE)\n",
+    "mae = mean_absolute_error(y_test, linear_predictions)\n",
+    "print(\"Linear Regression Mean Absolute Error (MAE):\", mae)\n",
+    "\n",
+    "# Mean Squared Error (MSE)\n",
+    "mse = mean_squared_error(y_test, linear_predictions)\n",
+    "print(\"Linear Regression Mean Squared Error (MSE):\", mse)\n",
+    "\n",
+    "# R^2 Score\n",
+    "r2 = r2_score(y_test, linear_predictions)\n",
+    "print(\"Linear Regression R^2 Score:\", r2)\n",
+    "\n",
+    "# Explained Variance Score\n",
+    "explained_variance = explained_variance_score(y_test, linear_predictions)\n",
+    "print(\"Linear Regression Explained Variance Score:\", explained_variance)\n",
+    "\n",
+    "# ------\n",
+    "print(\"-------\")\n",
+    "# Decision Tree\n",
+    "tree_rmse = mean_squared_error(y_test, tree_predictions, squared=False)\n",
+    "print(\"Decision Tree RMSE:\", tree_rmse)\n",
+    "\n",
+    "# Mean Absolute Error (MAE)\n",
+    "mae = mean_absolute_error(y_test, tree_predictions)\n",
+    "print(\"Decision Tree Mean Absolute Error (MAE):\", mae)\n",
+    "\n",
+    "# Mean Squared Error (MSE)\n",
+    "mse = mean_squared_error(y_test, tree_predictions)\n",
+    "print(\"Decision Tree Mean Squared Error (MSE):\", mse)\n",
+    "\n",
+    "# R^2 Score\n",
+    "r2 = r2_score(y_test, tree_predictions)\n",
+    "print(\"Decision Tree R^2 Score:\", r2)\n",
+    "\n",
+    "# Explained Variance Score\n",
+    "explained_variance = explained_variance_score(y_test, tree_predictions)\n",
+    "print(\"Decision Tree Explained Variance Score:\", explained_variance)\n",
+    "\n",
+    "# ------\n",
+    "print(\"-------\")\n",
+    "# Random Forest \n",
+    "forest_rmse = mean_squared_error(y_test, forest_predictions, squared=False)\n",
+    "print(\"Random Forest RMSE:\", forest_rmse)\n",
+    "\n",
+    "# Mean Absolute Error (MAE)\n",
+    "mae = mean_absolute_error(y_test, forest_predictions)\n",
+    "print(\"Random Forest Mean Absolute Error (MAE):\", mae)\n",
+    "\n",
+    "# Mean Squared Error (MSE)\n",
+    "mse = mean_squared_error(y_test, forest_predictions)\n",
+    "print(\"Random Forest Mean Squared Error (MSE):\", mse)\n",
+    "\n",
+    "# R^2 Score\n",
+    "r2 = r2_score(y_test, forest_predictions)\n",
+    "print(\"Random Forest R^2 Score:\", r2)\n",
+    "\n",
+    "# Explained Variance Score\n",
+    "explained_variance = explained_variance_score(y_test, forest_predictions)\n",
+    "print(\"Random Forest Explained Variance Score:\", explained_variance)\n",
+    "\n",
+    "# ------\n",
+    "print(\"-------\")\n",
+    "# Neuronal Network \n",
+    "nn_rmse = mean_squared_error(y_test, nn_predictions, squared=False)\n",
+    "print(\"Neuronal Network RMSE:\", nn_rmse)\n",
+    "\n",
+    "# Mean Absolute Error (MAE)\n",
+    "mae = mean_absolute_error(y_test, nn_predictions)\n",
+    "print(\"Neuronal Network Mean Absolute Error (MAE):\", mae)\n",
+    "\n",
+    "# Mean Squared Error (MSE)\n",
+    "mse = mean_squared_error(y_test, nn_predictions)\n",
+    "print(\"Neuronal Network Mean Squared Error (MSE):\", mse)\n",
+    "\n",
+    "# R^2 Score\n",
+    "r2 = r2_score(y_test, nn_predictions)\n",
+    "print(\"Neuronal Network R^2 Score:\", r2)\n",
+    "\n",
+    "# Explained Variance Score\n",
+    "explained_variance = explained_variance_score(y_test, nn_predictions)\n",
+    "print(\"Neuronal Network Explained Variance Score:\", explained_variance)\n"
    ]
   }
  ],
