--- a/model.ipynb
+++ b/model.ipynb
@@ -72,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model Creation"
+    "## Model Creation (Train and Predict)"
    ]
   },
   {
@@ -313,6 +313,63 @@
     "# Explained Variance Score\n",
     "explained_variance = explained_variance_score(y_test, nn_predictions)\n",
     "print(\"Neuronal Network Explained Variance Score:\", explained_variance)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Tatsächlicher Wert  Vorhersage\n",
+      "11131               14.69       14.69\n",
+      "4429                11.18       11.18\n",
+      "9443                24.84       24.84\n",
+      "28025               15.50       15.50\n",
+      "8254                11.49       11.49\n",
+      "...                   ...         ...\n",
+      "34853                7.94        7.94\n",
+      "2264                10.61       10.61\n",
+      "9683                 6.66        6.28\n",
+      "19929               12.15       12.15\n",
+      "40144                8.05        8.05\n",
+      "\n",
+      "[7244 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Review Predictions und tatsächlicher Wert\n",
+    "\n",
+    "results = pd.DataFrame({'Tatsächlicher Wert': y_test, 'Vorhersage': tree_predictions})\n",
+    "print(results)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model Deployment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import joblib\n",
+    "# Speichern des Modells in einer pkl-Datei\n",
+    "joblib.dump(tree_model, 'Decision_Tree_AQI_Project.pkl')\n",
+    "# Laden des Modells aus der pkl-Datei\n",
+    "loaded_model = joblib.load('Decision_Tree_AQI_Project.pkl')\n",
+    "\n",
+    "# Verwendung des geladenen Modells für Vorhersagen\n",
+    "predictions = loaded_model.predict(X_test)"
    ]
   }
  ],
