Presentation funktioniert! Model-Aufruf fehlt noch

--- a/presentation.ipynb
+++ b/presentation.ipynb
@@ -22,19 +22,35 @@
       " * Running on http://127.0.0.1:8080\n",
       " * Running on http://192.168.1.123:8080\n",
       "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [18/May/2023 14:11:11] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [18/May/2023 14:11:11] \"GET /static/iris.png HTTP/1.1\" 404 -\n",
-      "127.0.0.1 - - [18/May/2023 14:11:12] \"GET /favicon.ico HTTP/1.1\" 404 -\n",
-      "127.0.0.1 - - [18/May/2023 14:12:12] \"POST / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [18/May/2023 14:12:13] \"GET /static/iris.png HTTP/1.1\" 404 -\n",
-      "127.0.0.1 - - [18/May/2023 14:12:16] \"POST / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [18/May/2023 14:12:16] \"GET /static/iris.png HTTP/1.1\" 404 -\n"
+      "127.0.0.1 - - [21/May/2023 12:04:33] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [21/May/2023 12:04:38] \"POST / HTTP/1.1\" 302 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " - Running query URL:  https://weather.visualcrossing.com/VisualCrossingWebServices/rest/services/timeline/47.39,8.54/2023-05-22/2023-05-22?&unitGroup=metric&contentType=csv&include=days&key=XB2AJ7B74CP7PS8RWU3HY8WME\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [21/May/2023 12:04:38] \"GET /prediction HTTP/1.1\" 200 -\n"
      ]
     }
    ],
    "source": [
     "# Import the required libraries\n",
     "import joblib\n",
+    "import datetime\n",
+    "import config\n",
+    "import input\n",
+    "import preprocessing_functions as pf\n",
+    "import pandas as pd\n",
+    "from AQI_form import AQIForm\n",
     "from flask import Flask\n",
     "from flask import request\n",
     "from flask import jsonify\n",
@@ -44,19 +60,36 @@
     "from flask import render_template\n",
     "from AQI_form import AQIForm\n",
     "\n",
-    "# Read the models\n",
-    "#classifier_loaded = joblib.load(\"AQI_model.pkl\")\n",
+    "# Read the model\n",
+    "#AQIModel = joblib.load(\"Decision_Tree_AQI-Project.pkl\")\n",
+    "AQIModel = \"bla\"\n",
     "\n",
     "# Prediction function\n",
     "def make_prediction(model, sample_json):\n",
     "    # parse input from request\n",
     "    PredictionDate = sample_json['PredictionDate']\n",
+    "    PredictionCity = sample_json['PredictionCity']\n",
+    "\n",
+    "    PredictionDate = pf.form_format_date(PredictionDate)\n",
+    "\n",
+    "    input.model_weather_data(PredictionDate, PredictionCity)\n",
+    "\n",
+    "    # CSV-File ins Dataframe einlesen\n",
+    "    df_weather = pd.read_csv(config.csv_temp_weather)\n",
+    "    \n",
+    "    ##Code zum extrahieren der Daten für das Model => precipprob, windgust, visibility\n",
+    "    precipprob = df_weather['precipprob']\n",
+    "    windgust = df_weather['windgust']\n",
+    "    visibility = df_weather['visibility']    \n",
+    "    \n",
+    "    # Make an input vector\n",
+    "    weather = [[precipprob, windgust, visibility]]\n",
     "\n",
     "    # Predict\n",
-    "    AQIprediction = model.predict(PredictionDate)\n",
+    "    #PM10_prediction = model.predict(weather)\n",
     "\n",
-    "    return AQIprediction[0]\n",
-    "\n",
+    "    #return PM10_prediction\n",
+    "    return weather\n",
     "\n",
     "app = Flask(__name__)\n",
     "app.config['SECRET_KEY'] = 'mysecretkey'\n",
@@ -75,7 +108,7 @@
     "\n",
     "@app.route('/prediction')\n",
     "def prediction():\n",
-    "    content = {'PredictionDate': date(session['PredictionDate'])}\n",
+    "    content = {'PredictionDate': session['PredictionDate'],'PredictionCity': str(session['PredictionCity'])}\n",
     "\n",
     "    results = make_prediction(AQIModel, content)\n",
     "\n",
