Presentation with Model

--- a/presentation.ipynb
+++ b/presentation.ipynb
@@ -22,23 +22,9 @@
       " * Running on http://127.0.0.1:8080\n",
       " * Running on http://192.168.1.123:8080\n",
       "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [21/May/2023 12:23:05] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [21/May/2023 12:23:11] \"POST / HTTP/1.1\" 302 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " - Running query URL:  https://weather.visualcrossing.com/VisualCrossingWebServices/rest/services/timeline/47.39,8.54/2023-05-23/2023-05-23?&unitGroup=metric&contentType=csv&include=days&key=XB2AJ7B74CP7PS8RWU3HY8WME\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [21/May/2023 12:23:11] \"GET /prediction HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [21/May/2023 13:02:08] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [21/May/2023 13:02:13] \"POST / HTTP/1.1\" 302 -\n",
+      "127.0.0.1 - - [21/May/2023 13:02:13] \"GET /prediction HTTP/1.1\" 200 -\n"
      ]
     }
    ],
@@ -50,6 +36,7 @@
     "import input\n",
     "import preprocessing_functions as pf\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from AQI_form import AQIForm\n",
     "from flask import Flask\n",
     "from flask import request\n",
@@ -61,8 +48,7 @@
     "from AQI_form import AQIForm\n",
     "\n",
     "# Read the model\n",
-    "#AQIModel = joblib.load(\"Decision_Tree_AQI-Project.pkl\")\n",
-    "AQIModel = \"bla\"\n",
+    "AQIModel = joblib.load(\"Decision_Tree_AQI_Project.pkl\")\n",
     "\n",
     "# Prediction function\n",
     "def make_prediction(model, sample_json):\n",
@@ -72,7 +58,7 @@
     "\n",
     "    PredictionDate = pf.form_format_date(PredictionDate)\n",
     "\n",
-    "    input.model_weather_data(PredictionDate, PredictionCity)\n",
+    "    #input.model_weather_data(PredictionDate, PredictionCity)\n",
     "\n",
     "    # CSV-File ins Dataframe einlesen\n",
     "    df_weather = pd.read_csv(config.csv_temp_weather)\n",
@@ -83,13 +69,13 @@
     "    visibility = df_weather['visibility']    \n",
     "    \n",
     "    # Make an input vector\n",
-    "    weather = [[precipprob, windgust, visibility]]\n",
-    "\n",
+    "    weather = np.array([precipprob, windgust, visibility]).T\n",
+    "    \n",
     "    # Predict\n",
-    "    #PM10_prediction = model.predict(weather)\n",
+    "    PM10_prediction = model.predict(weather)\n",
     "\n",
     "    #return PM10_prediction\n",
-    "    return weather\n",
+    "    return PM10_prediction\n",
     "\n",
     "app = Flask(__name__)\n",
     "app.config['SECRET_KEY'] = 'mysecretkey'\n",
