--- a/presentation.ipynb
+++ b/presentation.ipynb
@@ -22,9 +22,24 @@
       " * Running on http://127.0.0.1:8080\n",
       " * Running on http://192.168.1.123:8080\n",
       "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [21/May/2023 13:02:08] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [21/May/2023 13:02:13] \"POST / HTTP/1.1\" 302 -\n",
-      "127.0.0.1 - - [21/May/2023 13:02:13] \"GET /prediction HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [21/May/2023 13:35:09] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [21/May/2023 13:35:18] \"POST / HTTP/1.1\" 302 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " - Running query URL:  https://weather.visualcrossing.com/VisualCrossingWebServices/rest/services/timeline/47.39,8.54/2023-05-17/2023-05-17?&unitGroup=metric&contentType=csv&include=days&key=XB2AJ7B74CP7PS8RWU3HY8WME\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [21/May/2023 13:35:18] \"GET /prediction HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [21/May/2023 13:35:57] \"GET / HTTP/1.1\" 200 -\n"
      ]
     }
    ],
@@ -58,7 +73,7 @@
     "\n",
     "    PredictionDate = pf.form_format_date(PredictionDate)\n",
     "\n",
-    "    #input.model_weather_data(PredictionDate, PredictionCity)\n",
+    "    input.model_weather_data(PredictionDate, PredictionCity)\n",
     "\n",
     "    # CSV-File ins Dataframe einlesen\n",
     "    df_weather = pd.read_csv(config.csv_temp_weather)\n",
