--- a/model.ipynb
+++ b/model.ipynb
@@ -10,17 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import config\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "import tensorflow as tf\n",
+    "from sqlalchemy import text\n",
     "from tensorflow import keras\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score, explained_variance_score"
    ]
@@ -35,12 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Lade den Datensatz aus 'merged_tables.csv'\n",
-    "data = pd.read_csv('merged_tables.csv')\n",
+    "# Lade den Datensatz aus DB\n",
+    "SQLquery = text('SELECT * FROM ' + config.db_weather_history + ' AS w JOIN ' + config.db_AQI_history + ' AS aqi ON w.\"datetime\" = aqi.\"Datum\"')\n",
+    "data = pd.read_sql(SQLquery, con=config.db_login.connect())\n",
+    "\n",
     "# Entferne Datensätze mit leeren Werten in den angegebenen Spalten\n",
     "data.dropna(subset=['Wert', 'precipprob', 'windgust', 'visibility'], inplace=True)"
    ]
@@ -55,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,17 +80,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Lineare Regression RMSE: 10.517236753153938\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Lineare Regression\n",
     "linear_model = LinearRegression()\n",
@@ -97,21 +92,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Entscheidungsbaum RMSE: 1.8641014721382632\n",
-      "Mean Absolute Error (MAE): 0.472338860051359\n",
-      "Mean Squared Error (MSE): 3.47487429842804\n",
-      "R^2 Score: 0.9769467319421307\n",
-      "Explained Variance Score: 0.9769474453264686\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Entscheidungsbaum\n",
     "tree_model = DecisionTreeRegressor()\n",
@@ -121,17 +104,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Random Forest RMSE: 1.9226926684854884\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Random Forest\n",
     "forest_model = RandomForestRegressor()\n",
@@ -141,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -149,26 +124,26 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "906/906 [==============================] - 7s 5ms/step - loss: 185.6165\n",
+      "3018/3018 [==============================] - 8s 3ms/step - loss: 121.0031\n",
       "Epoch 2/10\n",
-      "906/906 [==============================] - 3s 3ms/step - loss: 116.5620\n",
+      "3018/3018 [==============================] - 7s 2ms/step - loss: 92.1253\n",
       "Epoch 3/10\n",
-      "906/906 [==============================] - 3s 3ms/step - loss: 95.8578\n",
+      "3018/3018 [==============================] - 7s 2ms/step - loss: 91.1089\n",
       "Epoch 4/10\n",
-      "906/906 [==============================] - 2s 2ms/step - loss: 94.1520\n",
+      "3018/3018 [==============================] - 7s 2ms/step - loss: 90.3906\n",
       "Epoch 5/10\n",
-      "906/906 [==============================] - 2s 2ms/step - loss: 93.1985\n",
+      "3018/3018 [==============================] - 7s 2ms/step - loss: 89.6880\n",
       "Epoch 6/10\n",
-      "906/906 [==============================] - 2s 2ms/step - loss: 92.3493\n",
+      "3018/3018 [==============================] - 7s 2ms/step - loss: 89.1373\n",
       "Epoch 7/10\n",
-      "906/906 [==============================] - 2s 2ms/step - loss: 92.1556\n",
+      "3018/3018 [==============================] - 7s 2ms/step - loss: 88.8700\n",
       "Epoch 8/10\n",
-      "906/906 [==============================] - 2s 2ms/step - loss: 91.8781\n",
+      "3018/3018 [==============================] - 10s 3ms/step - loss: 88.4752\n",
       "Epoch 9/10\n",
-      "906/906 [==============================] - 2s 2ms/step - loss: 91.7418\n",
+      "3018/3018 [==============================] - 12s 4ms/step - loss: 88.2958\n",
       "Epoch 10/10\n",
-      "906/906 [==============================] - 2s 2ms/step - loss: 91.0009\n",
-      "227/227 [==============================] - 0s 2ms/step\n"
+      "3018/3018 [==============================] - 10s 3ms/step - loss: 88.0897\n",
+      "755/755 [==============================] - 1s 2ms/step\n"
      ]
     }
    ],
@@ -194,36 +169,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lineare Regression RMSE: 10.517236753153938\n",
-      "Linear Regression Mean Absolute Error (MAE): 7.491540286867864\n",
-      "Linear Regression Mean Squared Error (MSE): 110.61226892189198\n",
-      "Linear Regression R^2 Score: 0.26616790509542887\n",
-      "Linear Regression Explained Variance Score: 0.266531266231666\n",
+      "Lineare Regression RMSE: 10.585922168900106\n",
+      "Linear Regression Mean Absolute Error (MAE): 7.474681128697551\n",
+      "Linear Regression Mean Squared Error (MSE): 112.06174816601073\n",
+      "Linear Regression R^2 Score: 0.27852461639661275\n",
+      "Linear Regression Explained Variance Score: 0.2785247552922785\n",
       "-------\n",
-      "Decision Tree RMSE: 1.8641014721382632\n",
-      "Decision Tree Mean Absolute Error (MAE): 0.472338860051359\n",
-      "Decision Tree Mean Squared Error (MSE): 3.47487429842804\n",
-      "Decision Tree R^2 Score: 0.9769467319421307\n",
-      "Decision Tree Explained Variance Score: 0.9769474453264686\n",
+      "Decision Tree RMSE: 1.7183659812628398\n",
+      "Decision Tree Mean Absolute Error (MAE): 0.44076340028854644\n",
+      "Decision Tree Mean Squared Error (MSE): 2.9527816455614024\n",
+      "Decision Tree R^2 Score: 0.9809894160559365\n",
+      "Decision Tree Explained Variance Score: 0.9809905188590257\n",
       "-------\n",
-      "Random Forest RMSE: 1.9226926684854884\n",
-      "Random Forest Mean Absolute Error (MAE): 0.6738695046210812\n",
-      "Random Forest Mean Squared Error (MSE): 3.6967470974478482\n",
-      "Random Forest R^2 Score: 0.9754747670100848\n",
-      "Random Forest Explained Variance Score: 0.9754759031682241\n",
+      "Random Forest RMSE: 1.7199321347021936\n",
+      "Random Forest Mean Absolute Error (MAE): 0.4409083188802661\n",
+      "Random Forest Mean Squared Error (MSE): 2.9581665479812447\n",
+      "Random Forest R^2 Score: 0.980954747004252\n",
+      "Random Forest Explained Variance Score: 0.980955861705433\n",
       "-------\n",
-      "Neuronal Network RMSE: 9.44706274252924\n",
-      "Neuronal Network Mean Absolute Error (MAE): 6.836361900184248\n",
-      "Neuronal Network Mean Squared Error (MSE): 89.24699446128409\n",
-      "Neuronal Network R^2 Score: 0.407910989008754\n",
-      "Neuronal Network Explained Variance Score: 0.41082459776963887\n"
+      "Neuronal Network RMSE: 9.321453684212843\n",
+      "Neuronal Network Mean Absolute Error (MAE): 6.638284986911822\n",
+      "Neuronal Network Mean Squared Error (MSE): 86.88949878692517\n",
+      "Neuronal Network R^2 Score: 0.4405884657846443\n",
+      "Neuronal Network Explained Variance Score: 0.44095183897430634\n"
      ]
     }
    ],
@@ -317,27 +292,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       Tatsächlicher Wert  Vorhersage\n",
-      "11131               14.69       14.69\n",
-      "4429                11.18       11.18\n",
-      "9443                24.84       24.84\n",
-      "28025               15.50       15.50\n",
-      "8254                11.49       11.49\n",
-      "...                   ...         ...\n",
-      "34853                7.94        7.94\n",
-      "2264                10.61       10.61\n",
-      "9683                 6.66        6.28\n",
-      "19929               12.15       12.15\n",
-      "40144                8.05        8.05\n",
+      "        Tatsächlicher Wert  Vorhersage\n",
+      "78030                26.88   26.880000\n",
+      "136185               11.47   11.470000\n",
+      "71079                34.32   34.320000\n",
+      "126118               17.99   17.990000\n",
+      "45701                 4.10    4.100000\n",
+      "...                    ...         ...\n",
+      "60733                43.02   43.020000\n",
+      "6807                 18.82   18.820000\n",
+      "72003                17.98   17.980000\n",
+      "103481               10.58   12.675484\n",
+      "128225               14.89   14.890000\n",
       "\n",
-      "[7244 rows x 2 columns]\n"
+      "[24144 rows x 2 columns]\n"
      ]
     }
    ],
@@ -358,9 +333,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        precipprob  windgust  visibility\n",
+      "78030            0      16.7         8.8\n",
+      "136185         100      73.5         9.3\n",
+      "71079            0      19.4         4.4\n",
+      "126118           0      20.9        32.5\n",
+      "45701          100      28.0         9.4\n",
+      "...            ...       ...         ...\n",
+      "60733            0      10.4        28.1\n",
+      "6807             0      24.7        22.8\n",
+      "72003            0      16.5        12.9\n",
+      "103481           0      33.5        10.0\n",
+      "128225         100      26.6        23.8\n",
+      "\n",
+      "[24144 rows x 3 columns]\n",
+      "[26.88 11.47 34.32 ... 17.98 12.61 14.89]\n"
+     ]
+    }
+   ],
    "source": [
     "import joblib\n",
     "# Speichern des Modells in einer pkl-Datei\n",
@@ -368,8 +365,12 @@
     "# Laden des Modells aus der pkl-Datei\n",
     "loaded_model = joblib.load('Decision_Tree_AQI_Project.pkl')\n",
     "\n",
+    "print(X_test)\n",
+    "\n",
     "# Verwendung des geladenen Modells für Vorhersagen\n",
-    "predictions = loaded_model.predict(X_test)"
+    "predictions = loaded_model.predict(X_test)\n",
+    "\n",
+    "print(predictions)"
    ]
   }
  ],
