--- a/Weatherdata_API.ipynb
+++ b/Weatherdata_API.ipynb
@@ -135,7 +135,7 @@
     "    print('Error code: ', e.code,ErrorInfo)\n",
     "    sys.exit()\n",
     "    \n",
-    "# Parse the results as CSV, change lon/lat to string and write to file\n",
+    "# Parse the results as CSV\n",
     "CSVText = csv.reader(codecs.iterdecode(CSVBytes, 'utf-8'))\n"
    ]
   },
