--- a/eda.ipynb
+++ b/eda.ipynb
@@ -10,222 +10,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>datetime</th>\n",
-       "      <th>tempmax</th>\n",
-       "      <th>tempmin</th>\n",
-       "      <th>temp</th>\n",
-       "      <th>feelslikemax</th>\n",
-       "      <th>feelslikemin</th>\n",
-       "      <th>feelslike</th>\n",
-       "      <th>dew</th>\n",
-       "      <th>humidity</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Temp_Range</th>\n",
-       "      <th>Season</th>\n",
-       "      <th>Weather_Type</th>\n",
-       "      <th>Datum</th>\n",
-       "      <th>Standort</th>\n",
-       "      <th>Parameter</th>\n",
-       "      <th>Intervall</th>\n",
-       "      <th>Einheit</th>\n",
-       "      <th>Wert</th>\n",
-       "      <th>Status</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Zch_Stampfenbachstrasse</td>\n",
-       "      <td>04.01.01</td>\n",
-       "      <td>6.6</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>2.1</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>82.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>6.5</td>\n",
-       "      <td>Winter</td>\n",
-       "      <td>Cloudy</td>\n",
-       "      <td>04.01.01</td>\n",
-       "      <td>Zch_Stampfenbachstrasse</td>\n",
-       "      <td>PM10</td>\n",
-       "      <td>d1</td>\n",
-       "      <td>µg/m3</td>\n",
-       "      <td>22.84</td>\n",
-       "      <td>bereinigt</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Zch_Stampfenbachstrasse</td>\n",
-       "      <td>05.01.01</td>\n",
-       "      <td>7.3</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>4.3</td>\n",
-       "      <td>6.4</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>3.9</td>\n",
-       "      <td>1.9</td>\n",
-       "      <td>84.8</td>\n",
-       "      <td>...</td>\n",
-       "      <td>6.2</td>\n",
-       "      <td>Winter</td>\n",
-       "      <td>Cloudy</td>\n",
-       "      <td>05.01.01</td>\n",
-       "      <td>Zch_Stampfenbachstrasse</td>\n",
-       "      <td>PM10</td>\n",
-       "      <td>d1</td>\n",
-       "      <td>µg/m3</td>\n",
-       "      <td>22.63</td>\n",
-       "      <td>bereinigt</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Zch_Stampfenbachstrasse</td>\n",
-       "      <td>06.01.01</td>\n",
-       "      <td>8.2</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>6.2</td>\n",
-       "      <td>7.9</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4.9</td>\n",
-       "      <td>4.9</td>\n",
-       "      <td>91.9</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4.8</td>\n",
-       "      <td>Winter</td>\n",
-       "      <td>Rainy</td>\n",
-       "      <td>06.01.01</td>\n",
-       "      <td>Zch_Stampfenbachstrasse</td>\n",
-       "      <td>PM10</td>\n",
-       "      <td>d1</td>\n",
-       "      <td>µg/m3</td>\n",
-       "      <td>10.93</td>\n",
-       "      <td>bereinigt</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Zch_Stampfenbachstrasse</td>\n",
-       "      <td>07.01.01</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>2.1</td>\n",
-       "      <td>-0.2</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>93.5</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>Winter</td>\n",
-       "      <td>Rainy</td>\n",
-       "      <td>07.01.01</td>\n",
-       "      <td>Zch_Stampfenbachstrasse</td>\n",
-       "      <td>PM10</td>\n",
-       "      <td>d1</td>\n",
-       "      <td>µg/m3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>bereinigt</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Zch_Stampfenbachstrasse</td>\n",
-       "      <td>08.01.01</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>92.9</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Winter</td>\n",
-       "      <td>Rainy</td>\n",
-       "      <td>08.01.01</td>\n",
-       "      <td>Zch_Stampfenbachstrasse</td>\n",
-       "      <td>PM10</td>\n",
-       "      <td>d1</td>\n",
-       "      <td>µg/m3</td>\n",
-       "      <td>18.01</td>\n",
-       "      <td>bereinigt</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 49 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      name  datetime  tempmax  tempmin  temp  feelslikemax  \\\n",
-       "0  Zch_Stampfenbachstrasse  04.01.01      6.6      0.1   3.3           4.0   \n",
-       "1  Zch_Stampfenbachstrasse  05.01.01      7.3      1.1   4.3           6.4   \n",
-       "2  Zch_Stampfenbachstrasse  06.01.01      8.2      3.4   6.2           7.9   \n",
-       "3  Zch_Stampfenbachstrasse  07.01.01      2.4      1.1   1.7           2.1   \n",
-       "4  Zch_Stampfenbachstrasse  08.01.01      2.2      1.2   1.8           2.2   \n",
-       "\n",
-       "   feelslikemin  feelslike  dew  humidity  ...  Temp_Range  Season  \\\n",
-       "0           0.1        2.1  0.5      82.0  ...         6.5  Winter   \n",
-       "1           1.1        3.9  1.9      84.8  ...         6.2  Winter   \n",
-       "2           2.0        4.9  4.9      91.9  ...         4.8  Winter   \n",
-       "3          -0.2        1.5  0.8      93.5  ...         1.3  Winter   \n",
-       "4           1.2        1.8  0.8      92.9  ...         1.0  Winter   \n",
-       "\n",
-       "   Weather_Type     Datum                 Standort  Parameter  Intervall  \\\n",
-       "0        Cloudy  04.01.01  Zch_Stampfenbachstrasse       PM10         d1   \n",
-       "1        Cloudy  05.01.01  Zch_Stampfenbachstrasse       PM10         d1   \n",
-       "2         Rainy  06.01.01  Zch_Stampfenbachstrasse       PM10         d1   \n",
-       "3         Rainy  07.01.01  Zch_Stampfenbachstrasse       PM10         d1   \n",
-       "4         Rainy  08.01.01  Zch_Stampfenbachstrasse       PM10         d1   \n",
-       "\n",
-       "   Einheit   Wert     Status  \n",
-       "0    µg/m3  22.84  bereinigt  \n",
-       "1    µg/m3  22.63  bereinigt  \n",
-       "2    µg/m3  10.93  bereinigt  \n",
-       "3    µg/m3    NaN  bereinigt  \n",
-       "4    µg/m3  18.01  bereinigt  \n",
-       "\n",
-       "[5 rows x 49 columns]"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "\n",
     "import config\n",
+    "import preprocessing_functions as pf\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sqlalchemy import text\n",
+    "\n",
+    "#Verbindung zur DB aufbauen mit preprocessing function\n",
+    "pf.db_connect(config.db_name)\n",
     "\n",
     "SQLquery = text('SELECT * FROM ' + config.db_weather_history + ' AS w JOIN ' + config.db_AQI_history + ' AS aqi ON w.\"datetime\" = aqi.\"Datum\"')\n",
     "data = pd.read_sql(SQLquery, con=config.db_login.connect())\n"
